# cft_test_task

./: .gitignore  CMakeLists.txt  README.md  clean.sh  run.sh
docs/: about.md  install.md
example_tests/: generator_input_files.sh  test_2.txt  test_3.txt  test_4.txt
include/: finder.hpp  point.hpp  triangle.hpp
src/: generator.cpp  main  main.cpp
src/finder/: finder.cpp
src/geometry/: point.cpp  triangle.cpp
src/logic/: logic.cpp
src/test/: google_test.cpp
test_params/: file_generator.sh
